# online-chess

./: pyproject.toml
src/chess/: board.py  castlerights.py  color.py  exceptions.py  move.py  pieces.py  status.py  util.py
src/web/: __init__.py  api.py  crud.py  deps.py  htmx.py  manager.py  models.py  renderer.py
static/css/: style.css
templates/: _template.html  game.html  index.html  login.html  register.html
tests/: conftest.py  test_full_game.py  test_get_fen.py  test_movegen.py  test_perft.py  test_promotion.py  test_threat_check.py  test_util.py
