[project]
name = 'online-chess'
version = '0.0.1'
dependencies = [
  'fastapi',
  'websockets',
  'sqlalchemy',
  'uvicorn[standard]',
  'gunicorn',
]

[project.optional-dependencies]
dev = ['ruff', 'pytest']

[tool.ruff]
line-length = 79
[tool.ruff.format]
quote-style = 'single'
[tool.ruff.lint]
extend-select = ['I', 'E501']

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
