[project]
name = 'online-chess'
version = '0.0.1'
dependencies = [
  'python-ulid',
  'combustache',
  'fastapi',
  'websockets',
  'sqlalchemy',
  'uvicorn[standard]',
  'gunicorn',
]

[project.optional-dependencies]
dev = ['ruff', 'pytest']

[tool.ruff]
line-length = 79
[tool.ruff.format]
quote-style = 'single'
[tool.ruff.lint]
extend-select = ['I', 'E501']

[tool.pytest.ini_options]
markers = ['perft: check number of legal moves against predetermined values']

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['src/chess', 'src/web']
